--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     </div>
     <div id="home" class="header">
         <div class="header-left">
-            <img src="../images/portfolio/photo4.jpg" alt="Rijul Mandloi" width="500" height="500" />
+            <img src="images/photo4.jpg" alt="Rijul Mandloi" width="500" height="500" />
         </div>
         <div class="header-right">
             <pre><span id="hr1">Rijul Mandloi</span>
