--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div id="projects" class="low-left">
             <p>PROJECTS</p>
             <ul>
-                <li><a href="../21-06/tribute.html" target="_blank">Elon Musk - Tribute</a></li>
+                <li><a href="https://flyingpotato0.github.io/tribute/" target="_blank">Elon Musk - Tribute</a></li>
                 <li><a href="../19-06/forms.html" target="_blank">Form - Matrix Theme</a></li>
                 <li><a href="https://github.com/flyingpotato0?tab=repositories" target="_blank">Github Repository</a>
                 </li>
